--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,2 @@
-certifi==2020.12.5
-cffi==1.14.4
-chardet==3.0.4
-cryptography==3.3.1
-docker==4.4.0
-english==2020.7.0
-idna==2.10
-mail-parser==3.14.0
-monotonic==1.5
-neotime==1.7.4
-packaging==20.8
-pansi==2020.7.3
-prompt-toolkit==2.0.10
+gmail-parser==3.14.0
 py2neo==2020.1.1
-pycparser==2.20
-Pygments==2.7.3
-pyparsing==2.4.7
-pytz==2020.4
-pywin32==227
-requests==2.25.0
-simplejson==3.17.2
-six==1.15.0
-urllib3==1.26.2
-wcwidth==0.2.5
-websocket-client==0.57.0
